:lipstick: fix ordering and contrast

--- a/src/components/ControlPanel/index.styl
+++ b/src/components/ControlPanel/index.styl
@@ -30,6 +30,7 @@
 		flex 1
 		max-width 100%
 		min-width 100%
+		padding-right 3rem
 
 .button
 	display block
@@ -48,6 +49,7 @@
 	cursor pointer
 	background currentColor
 	box-shadow -0.125rem -0.125rem 0 0.38rem currentColor
+	text-shadow rgba(0,0,0,0.5) 0 0 1px
 	&:focus
 		outline none
 		box-shadow -0.125rem -0.125rem 0 0.38rem currentColor,
